2015-12-08  Siddhesh Poyarekar  <sid@reserved-bit.com>

	* benchtests/sincos-inputs: Add inputs from sin-inputs and
	cos-inputs.

2015-12-07  Andrew Senkevich  <andrew.senkevich@intel.com>

	* sysdeps/x86/fpu/bits/math-vector.h: W/o -fopenmp use GCC 6.*
	__attribute__ ((__simd__)) for vector math function declarations.

2015-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	Fix typo in strncat, wcsncat manual entries
	* manual/string.texi (Copying and Concatenation): Fix typos in
	sample implementations of strncat and wcsncat, by having them use
	the old value of the destination length, not the new one.

2015-12-04  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16961]
	[BZ #16962]
	* math/s_nan.c (__nan): Use __strtod_nan instead of constructing a
	string on the stack for strtod.
	* math/s_nanf.c (__nanf): Use __strtof_nan instead of constructing
	a string on the stack for strtof.
	* math/s_nanl.c (__nanl): Use __strtold_nan instead of
	constructing a string on the stack for strtold.
	* stdlib/Versions (libc): Add __strtof_nan, __strtod_nan and
	__strtold_nan to GLIBC_PRIVATE.
	* math/test-nan-overflow.c: New file.
	* math/test-nan-payload.c: Likewise.
	* math/Makefile (tests): Add test-nan-overflow and
	test-nan-payload.

2015-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	Consistency about byte vs character in string.texi
	* manual/string.texi (String and Array Utilities):
	Distinguish more carefully among bytes, multibyte characters,
	and wide characters.  Use "byte" when talking about C 'char',
	to distinguish it more clearly from multibyte characters.
	Say "wide character" or "multibyte character" instead of
	"character", when a wide or multibyte character is intended.
	Similarly for "multibyte string" versus "string".
	Define these terms more carefully.

2015-12-03  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/arm/math_private.h (LDBL_CLASSIFY_COMPAT): New symbol.
	* sysdeps/microblaze/math_private.h (LDBL_CLASSIFY_COMPAT):
	Likewise.