@@ -22,24 +22,26 @@
 subdir := benchtests
 
 include ../Makeconfig
-bench-math := acos acosh asin asinh atan atanh cos cosh exp exp2 ffs ffsll \
-	      log log2 modf pow rint sin sincos sinh sqrt tan tanh
+bench-math := acos acosh asin asinh atan atanh cos cosh exp exp2 log log2 \
+	      modf pow rint sin sincos sinh sqrt tan tanh
 
 bench-pthread := pthread_once
 
-bench := $(bench-math) $(bench-pthread)
+bench-string := ffs ffsll
+
+bench := $(bench-math) $(bench-pthread) $(bench-string)
 
 # String function benchmarks.
-string-bench := bcopy bzero memccpy memchr memcmp memcpy memmem memmove \
-		mempcpy memset rawmemchr stpcpy stpncpy strcasecmp strcasestr \
-		strcat strchr strchrnul strcmp strcpy strcspn strlen \
-		strncasecmp strncat strncmp strncpy strnlen strpbrk strrchr \
-		strspn strstr strcpy_chk stpcpy_chk memrchr strsep strtok \
-		strcoll
-wcsmbs-bench := wcslen wcsnlen wcscpy wcpcpy wcsncpy wcpncpy wcscat wcsncat \
-		wcscmp wcsncmp wcschr wcschrnul wcsrchr wcsspn wcspbrk wcscspn \
-		wmemchr wmemset wmemcmp
-string-bench-all := $(string-bench) ${wcsmbs-bench}
+string-benchset := bcopy bzero memccpy memchr memcmp memcpy memmem memmove \
+		   mempcpy memset rawmemchr stpcpy stpncpy strcasecmp strcasestr \
+		   strcat strchr strchrnul strcmp strcpy strcspn strlen \
+		   strncasecmp strncat strncmp strncpy strnlen strpbrk strrchr \
+		   strspn strstr strcpy_chk stpcpy_chk memrchr strsep strtok \
+		   strcoll
+wcsmbs-benchset := wcslen wcsnlen wcscpy wcpcpy wcsncpy wcpncpy wcscat wcsncat \
+		   wcscmp wcsncmp wcschr wcschrnul wcsrchr wcsspn wcspbrk wcscspn \
+		   wmemchr wmemset wmemcmp
+string-benchset-all := $(string-benchset) ${wcsmbs-benchset}
 
 # We have to generate locales
 LOCALES := en_US.UTF-8 tr_TR.UTF-8 cs_CZ.UTF-8 fa_IR.UTF-8 fr_FR.UTF-8 \
@@ -49,13 +51,13 @@ LOCALES := en_US.UTF-8 tr_TR.UTF-8 cs_CZ.UTF-8 fa_IR.UTF-8 fr_FR.UTF-8 \
 	   hu_HU.UTF-8 it_IT.UTF-8 sr_RS.UTF-8 zh_CN.UTF-8
 include ../gen-locales.mk
 
-stdlib-bench := strtod
+stdlib-benchset := strtod
 
-stdio-common-bench := sprintf
+stdio-common-benchset := sprintf
 
 math-benchset := math-inlines
 
-benchset := $(string-bench-all) $(stdlib-bench) $(stdio-common-bench) \
+benchset := $(string-benchset-all) $(stdlib-benchset) $(stdio-common-benchset) \
 	    $(math-benchset)
 
 CFLAGS-bench-ffs.c += -fno-builtin
